# recipe-ai-toolkit

./: .env.example  .gitignore  README.md  pyproject.toml  run_recipe_macros.py  run_recipe_scrape.py
sample_scrape/: 15 Minute Triple Smash Burger with Bacon.md  18 Minute Burrito.md  20-Min Chicken Shawarma Wrap.md  22 Minute Katsu Sandwich.md  23 Minute Chicken Strips.md  500 Calorie Burger.md  All-Purpose Noodle Stir Fry Sauce.md  Anything You Have Frittata.md  Bacon Egg and Cheese Bagel.md  Higher Protein Cheesy Gordita Crunch.md
src/recipe_macros/: cli.py  core.py
src/recipe_macros.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/recipe_scrape/: __init__.py  cli.py  core.py
